src/index.css
:root {
  --dark-background: rgb(90, 80, 120);
  --dark-backgroundMain: rgb(70, 60, 96);
}

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: rgb(249, 249, 249);
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

* {
  margin: 0;
}

.gold {
  color: goldenrod;
}

.nav {
  background-color: white;
  height: 60px;
  padding: 0px 20px;
  box-shadow: 0px 0px 5px grey;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.nav-dark {
  background-color: var(--dark-background);
  color: white;
  height: 60px;
  padding: 0px 20px;
  box-shadow: 0px 0px 5px rgba(255, 255, 255, 0.4);
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.nav-menu {
  display: flex;
  list-style: none;
  float: none;
  position: absolute;
  top: 30px;
  left: 50%;
  transform: translate(-50%, -50%);
}

.nav-link {
  margin: 0px 5px;
  font-weight: 500;
}

.nav-link:hover {
  cursor: pointer;
}

.nav-title {
  font-size: 18px;
}

.nav-icon {
  height: 22px;
  margin: 0px 3px;
}

.container {
  margin: 40px;
}

.dark {
  background-color: var(--dark-backgroundMain);
  height: 100%;
  padding-bottom: 1000px;
}

.section-main {
  background-color: white;
  margin: auto;
  max-width: 800px;
  margin-top: 40px;
  border-radius: 15px;
  box-shadow: 0px 0px 5px grey;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.section-main-dark {
  background-color: var(--dark-background);
  color: white;
  margin: auto;
  max-width: 800px;
  margin-top: 40px;
  border-radius: 15px;
  box-shadow: 0px 0px 5px rgb(255, 255, 255, 0.4);
  display: flex;
  flex-direction: column;
  align-items: center;
}

.home-title {
  font-size: 24px;
  font-weight: 700;
  margin: 0px 10px;
  text-align: center;
}

.home-subtitle {
  margin: 2px 10px;
  font-size: 20px;
  font-weight: 600;
  text-align: center;
}

.home-smalltitle {
  color: #666666;
  margin: 5px 10px;
  font-size: 16px;
  font-weight: 500px;
  text-align: center;
}

.home-smalltitle-dark {
  color: white;
  margin: 5px 10px;
  font-size: 16px;
  font-weight: 500px;
  text-align: center;
  padding-bottom: 40px;
}

.home-logo {
  padding-top: 20px;
  max-height: 200px;
}

.home-sm {
  position: absolute;
  margin: 180px 10px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  height: 32px;
}

.home-sm-icon {
  margin: 0px 5px;
  font-size: 28px;
  transition: all 0.2s ease-in-out;
}

.home-sm-icon:hover {
  cursor: pointer;
  transition: all 0.2s ease-in-out;
  font-size: 32px;
  margin: 0px 5px;
}

@media (max-width: 600px) {
  .nav-icon {
    display: none;
  }

  .nav-title {
    display: none;
  }
}

